# quantized_looper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
quantized_looper/: .clangd  .cproject  .mxproject  .project  CMakeLists.txt  main.cpp  quantized_looper Debug.launch  quantized_looper.ioc
quantized_looper/Core/Inc/: main.h  stm32f7xx_hal_conf.h  tim.h
quantized_looper/Core/Src/: gpio.c  main.c  tim.c
quantized_looper/Debug/: main.cyclo  main.d  main.su  makefile  objects.list  quantized_looper.elf  quantized_looper.list  quantized_looper.map  sources.mk  subdir.mk
quantized_looper/Debug/Core/: main.d  subdir.mk
quantized_looper/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
quantized_looper/Debug/Core/Startup/: subdir.mk
quantized_looper/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal.cyclo  stm32f7xx_hal_dma.cyclo  stm32f7xx_hal_flash.cyclo  stm32f7xx_hal_flash_ex.cyclo  stm32f7xx_hal_gpio.cyclo  stm32f7xx_hal_pcd.cyclo  stm32f7xx_hal_rcc.cyclo  stm32f7xx_hal_rcc_ex.cyclo  stm32f7xx_hal_uart.cyclo  stm32f7xx_hal_uart_ex.cyclo  subdir.mk
quantized_looper/Hardware/: CMakeLists.txt  led.hpp
quantized_looper/cmake/: starm-clang.cmake
quantized_looper/cmake/stm32cubemx/: CMakeLists.txt
quantized_looper/hardware/: CMakeLists.txt  led.hpp
quantized_looper/software/: CMakeLists.txt  led_tasks.cpp  led_tasks.hpp
quantized_looper/utils/: CMakeLists.txt  logger_singleton.hpp
tests/: CMakeLists.txt
tests/mocks/Hardware/: CMakeLists.txt
